# pytred

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: docs-ci.yml  python-ci.yml
docs/: index.md
docs/api_reference/: cli.md  data_hub.md  data_node.md  decorators.md
example/: 01_basic_preprocessing.ipynb  02_use_completed_data.ipynb
examples/: 01_basic_preprocessing.ipynb  02_use_completed_data.ipynb  03_visualize_workflow.ipynb
src/pytred/: __init__.py  _types.py  cli.py  data_hub.py  data_node.py  exceptions.py
src/pytred/annotations/: __init__.py  pandas.py
src/pytred/decorators/: __init__.py  polars.py
src/pytred/helpers/: decorator.py  md_tabulator.py  notebooks.py  visualize.py
tests/: conftest.py  test_annotations.py  test_cli.py  test_data_hub.py  test_decorators.py
tests/fixtures/: data_hub.py  expected_report_of_complecated_datahub.md
tests/helpers/: data_hub.py  test_md_tabulator.py  test_nodebooks.py  test_visualize.py
