[project]
name = "pytred"
dynamic = ["version"]
description = "Add your description here"
authors = [
    { name = "Shinichi Kanehira", email = "skanehir1126@gmail.com" }
]
dependencies = [
    "pandas>=2.0",
    "polars>=0.20",
    "numpy",
    "typing-extensions>=4.10",
    "pyarrow>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.optional-dependencies]
visualize = [
    "graphviz>=0.20.2",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.hatch.version]
path = "src/pytred/__init__.py"

[tool.rye]
managed = true
dev-dependencies = [
    "mkdocs>=1.5.3",
    "pytest>=8.1.1",
    "tox>=4.14.1",
    "ipykernel>=6.29.3",
    "scikit-learn>=1.1",
    "mkdocstrings>=0.24.1",
    "mkdocs-material>=9.5.14",
    "mkdocstrings-python>=1.9.0",
    "graphviz>=0.20.2",
    "mkdocs-jupyter>=0.24.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
exclude = [
    'tests'
]
ignore_missing_imports = true


