[project]
name = "pytred"
dynamic = ["version"]
description = "Python Tools for Refinement and Enhancement of Data"
authors = [
    { name = "Shinichi Kanehira", email = "skanehir1126@gmail.com" }
]
dependencies = [
    "pandas>=2.0",
    "polars>=0.20",
    "numpy",
    "typing-extensions>=4.10",
    "pyarrow>=11",
    "matplotlib",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.hatch.version]
path = "src/pytred/__init__.py"

[project.scripts]
pytred = "pytred.cli:cli"

[tool.rye]
managed = true
dev-dependencies = [
    "mkdocs>=1.5.3",
    "pytest>=8.1.1",
    "ipykernel>=6.29.3",
    "scikit-learn>=1.1",
    "mkdocstrings>=0.24.1",
    "mkdocs-material>=9.5.14",
    "mkdocstrings-python>=1.9.0",
    "graphviz>=0.20.2",
    "mkdocs-jupyter>=0.24.6",
    "tox-uv>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
exclude = [
    'tests'
]
ignore_missing_imports = true

[tool.black]
line-length = 99
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
line_length = 99
force_single_line = true
